# SyncFiles

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  compile&test.bat  vcpkg.json
include/: Functions.h  ThreadSafe.h  Types.h
src/: CMakeLists.txt  Functions.cpp  main.cpp  tests.cpp
